--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:name="com.mobillabor.moblab.ui.details.DetailsFragment"
         android:label="DetailsFragment" >
         <argument
-            android:name="characterId"
+            android:name="charID"
             app:argType="string" />
     </fragment>
     <fragment
