--- a/app/src/main/res/layout/character_row_item.xml
+++ b/app/src/main/res/layout/character_row_item.xml
@@ -8,7 +8,7 @@
     android:paddingRight="16dp"
     android:paddingTop="8dp"
     android:layout_margin="5dp"
-    android:background="@color/list_item_color"
+    android:background="@color/purple_200"
     android:gravity="center_vertical">
 
     <TextView
