--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="50dp"
-        android:textColor="@color/black"
+        android:textColor="@color/purple_700"
         android:text="One story to rule them all..."/>
 
     <androidx.recyclerview.widget.RecyclerView
